Render the form elements in line horizontally.

--- a/css/timeperiod-form-elements.css
+++ b/css/timeperiod-form-elements.css
@@ -1,7 +1,7 @@
-fieldset.fieldgroup > div.fieldset-wrapper > div.form-item.form-type-number {
-  display: inline-block !important;
-  margin-left: 0.9em; }
-  fieldset.fieldgroup > div.fieldset-wrapper > div.form-item.form-type-number:first-of-type {
-    margin-left: 0; }
-
-/*# sourceMappingURL=timeperiod-form-elements.css.map */
+fieldset.timeperiod .form-item {
+  display: inline-block;
+  margin-left: 1em;
+}
+fieldset.timeperiod .form-item:first-of-type {
+  margin-left: 0;
+}
